# LLM-Playground

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  requirements.txt
.github/workflows/: daily_digest.yml
01-fundamentals/: useful_commands.sh
01-fundamentals/fastapi_example/: Dockerfile  ci.yaml  fastapi_example.py  infra.tf
01-fundamentals/gradio-client-example/: main.py  pyproject.toml
02-applications/expense-analyzer-llm/: analyse-transactions.ipynb  expense-analyzer-llama2
02-applications/vedic-astrology-llm/: pyproject.toml
02-applications/vedic-astrology-llm/notebooks/: astro-analysis.ipynb  rag.ipynb
02-applications/vedic-astrology-llm/src/: __main__.py
02-applications/vedic-astrology-llm/src/model/: prompts.py
02-applications/youtube-digest-bot/: .env.example  .gitignore  README.md  config.yml  pyproject.toml
02-applications/youtube-digest-bot/src/: digest.py  email_sender.py  summarizer.py  transcript_extractor.py  video_fetcher.py
02-applications/youtube-digest-bot/src/utils/: config.py
02-applications/youtube-digest-bot/templates/: email_template.html
02-applications/youtube-summarizer-llm/: bot.py  functions.py  pyproject.toml
expense-analyzer-llm/: README.md  analyse-transactions.ipynb
general_utils/: llm.py
gradio-client-example/: pyproject.toml
text-to-image-flux.1/: generate_image.py
vedic-astrology-llm/: README.md  requirements.txt
vedic-astrology-llm/scripts/: astro-analysis.ipynb
vedic-astrology-llm/src/data/_scrape_data/: extract_text.py  links_retriever.py
youtube-summarizer-llm/: README.md  __main__.py  functions.py  requirements.txt
