[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vedic-astrology-llm"
version = "0.1.0"
description = "Document Q&A system for Vedic astrology texts using RAG"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "google",
    "pandas",
    "readability-lxml",
    "trafilatura",
    "tzwhere",
]